@@ -8,7 +8,7 @@
 /**
  * Test integration with Field Collection.
  */
-class ScannerWithFieldCollectionTestCase extends ScannerBaseTestCase {
+class ScannerWithFieldCollectionTestCase extends ScannerBasicsTestCase {
 
   /**
    * {@inheritdoc}
@@ -16,7 +16,7 @@ class ScannerWithFieldCollectionTestCase extends ScannerBaseTestCase {
   public static function getInfo() {
     return array(
       'name' => 'Scanner with Field Collection',
-      'description' => 'Examine how the module works with Field Collection.',
+      'description' => 'Repeat the base tests with Field Collection.',
       'group' => 'scanner',
       'dependencies' => array(
         'devel',
@@ -31,12 +31,16 @@ class ScannerWithFieldCollectionTestCase extends ScannerBaseTestCase {
   public function setUp(array $modules = array()) {
     // Enable the FC module.
     $modules[] = 'field_collection';
-    // Need the helper module.
+
+    // Some helper logic.
     $modules[] = 'scanner_with_fc_tests';
+
+    // Buid the site.
     parent::setUp($modules);
 
-    // Log in as user 1, to avoid permissions problems.
-    $this->loginUser1();
+    // Delete the same content created above.
+    module_load_include('inc', 'devel_generate');
+    devel_generate_content_kill(array('node_types' => array('article')));
 
     // Add a FC field to the Article content type.
     $this->drupalGet('admin/structure/types/manage/article/fields');
@@ -80,87 +84,6 @@ class ScannerWithFieldCollectionTestCase extends ScannerBaseTestCase {
 
     // Generate some sample content.
     $this->generateSampleContent();
-  }
-
-  /**
-   * Test the search functionality.
-   */
-  public function testSearch() {
-    // Load the settings page, confirm the FC field is present.
-    $this->drupalGet('admin/content/scanner/settings');
-    $this->assertResponse(200);
-
-    // Confirm that the field from the FC field is present.
-    $this->assertText(t('article: field_text'));
-
-    $this->drupalGet('admin/content');
-    $this->assertResponse(200);
-
-    // Load the search form.
-    $this->drupalGet('admin/content/scanner');
-    $this->assertResponse(200);
-
-    // Search for a word.
-    $values = array(
-      'search' => $this->word,
-    );
-    $this->drupalPost(NULL, $values, t('Search'));
-    $this->assertResponse(200);
-
-    // Make sure the 'no results' message wasn't found.
-    $this->assertNoText('Your search yielded no results.');
-    $this->assertText('Search Results');
-
-    // There should be at least one match in the FC field structure.
-    $this->assertText('matches in article field_stuff-&gt;field_text_value field');
-
-    // Identify how many items were found.
-    $xpath = $this->xpath('//ol//a');
-    $results_count = count($xpath);
-
-    // Try replacing the text.
-    $values = array(
-      'replace' => $this->replaceWord,
-    );
-    $this->drupalPost(NULL, $values, t('Replace'));
-    $this->assertResponse(200);
-
-    // Confirm the confirmation form shows correctly.
-    $this->assertText(t('Confirm Replace'));
-    $this->assertText(t('Are you sure you want to make the following replacement?'));
-    $this->assertText(t('Search for:'));
-    $this->assertText('[' . $this->word . ']');
-    $this->assertText(t('Replace with:'));
-    $this->assertText('[' . $this->replaceWord . ']');
-    $this->assertFieldById('edit-confirm');
-    $this->assertFieldById('edit-cancel');
-    $this->drupalPost(NULL, array(), t('Yes, Continue'));
-    $this->assertResponse(200);
-    $this->assertText(strip_tags(t('Replacing [%search] with [%replace] ...', array('%search' => $this->word, '%replace' => $this->replaceWord))));
-
-    // There should be the same number of items replaced as there were items
-    // found the first time.
-    $xpath = $this->xpath('//ol//a');
-    $this->assertEqual($results_count, count($xpath));
-
-    // Search the content again, this time look for the replacement word.
-    $this->drupalGet('admin/content/scanner');
-    $this->assertResponse(200);
-    $values = array(
-      'search' => $this->replaceWord,
-    );
-    $this->drupalPost(NULL, $values, t('Search'));
-    $this->assertResponse(200);
-
-    // Make sure the 'no results' message wasn't found.
-    $this->assertNoText('Your search yielded no results.');
-    $this->assertText('Search Results');
-    $this->assertText('matches in article field_stuff-&gt;field_text_value field');
-
-    // There should be the same number of results found on this search as there
-    // were items found the first time.
-    $xpath = $this->xpath('//ol//a');
-    $this->assertEqual($results_count, count($xpath));
   }
 
 }
